# ChangeLog for dev-python/cheetah
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cheetah/ChangeLog,v 1.79 2011/02/27 18:02:47 ranger Exp $

  27 Feb 2011; Brent Baude <ranger@gentoo.org> cheetah-2.4.4.ebuild:
  stable ppc, bug 352728

  29 Jan 2011; Raúl Porcel <armin76@gentoo.org> cheetah-2.4.4.ebuild:
  alpha/ia64/sparc stable wrt #352728

  26 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> cheetah-2.4.4.ebuild:
  x86 stable wrt bug #352728

  26 Jan 2011; Markos Chandras <hwoarang@gentoo.org> cheetah-2.4.4.ebuild:
  Stable on amd64 wrt bug #352728

*cheetah-2.4.4 (19 Dec 2010)

  19 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +cheetah-2.4.4.ebuild:
  Version bump. Fixed tests with Python 2.7 (bug #293974).

  14 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -cheetah-2.4.2.1.ebuild:
  Delete.

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org> cheetah-2.4.3.ebuild:
  alpha/ia64/sparc stable wrt #341615

  24 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> cheetah-2.4.3.ebuild:
  x86 stable wrt bug #341615

  20 Oct 2010; Brent Baude <ranger@gentoo.org> cheetah-2.4.3.ebuild:
  stable ppc, bug 341615

  18 Oct 2010; Markos Chandras <hwoarang@gentoo.org> cheetah-2.4.3.ebuild:
  Stable on amd64 wrt bug #341615

*cheetah-2.4.3 (19 Sep 2010)

  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -cheetah-2.4.0.ebuild, -cheetah-2.4.1.ebuild, -cheetah-2.4.2.ebuild,
  +cheetah-2.4.3.ebuild:
  Version bump.

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> cheetah-2.4.2.1.ebuild:
  stable amd64, bug 310261

  08 May 2010; Raúl Porcel <armin76@gentoo.org> cheetah-2.4.2.1.ebuild:
  alpha/ia64/sparc stable wrt #313143

  18 Apr 2010; <nixnut@gentoo.org> cheetah-2.4.2.1.ebuild:
  ppc stable #313143

  13 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  cheetah-2.4.2.1.ebuild:
  stable x86, bug 313143

*cheetah-2.4.2.1 (01 Mar 2010)
